# acoustic-sim-framework

./: .gitignore  QUICKSTART.md  README.md  REPOSITORY_STRUCTURE.txt  requirements.txt  setup.cfg  setup.py
config/: default.yaml
examples/: run_simulation_example.py
scripts/: generate_dataset.py
src/: __init__.py
src/array_geometry/: __init__.py  microphone_array.py
src/data_synthesis/: __init__.py  mixer.py
src/propagation_model/: __init__.py  room_impulse_response.py
src/signal_generation/: __init__.py  noise_sources.py
src/utils/: __init__.py  audio_io.py  labels.py
tests/: __init__.py  test_basic_functionality.py
