[metadata]
name = acoustic-sim-framework
version = 0.0.0
description = Acoustic Simulation Framework
license = MIT

[options]
# Let setuptools discover packages automatically from repo root.
packages = find:
install_requires =
    numpy
    scipy
    librosa
    pyroomacoustics
    soundfile
    PyYAML
    tqdm
zip_safe = False

[options.packages.find]
# Search for packages starting at repository root; 'src' directory (with __init__.py) will be discovered.
where = .
